tests/javacresults/op_chord.txt
Intermediate.java:28: error: no suitable constructor found for Chord(Chord)
c1 = new Chord(c2);
     ^
    constructor Chord.Chord(int,double) is not applicable
      (actual and formal argument lists differ in length)
    constructor Chord.Chord(Pitch_Duration_Tuple[]) is not applicable
      (actual argument Chord cannot be converted to Pitch_Duration_Tuple[] by method invocation conversion)
Intermediate.java:30: error: array required, but Chord found
System.out.println(c1[1].toString());
                     ^
2 errors
